Fix image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
 
   <ol>
     <li>Github<a href="#">
-    <img src="img/github.png" alt="" width="150" height="80"></a></li>
+    <img src="github.png" alt="" width="150" height="80"></a></li>
     <br>
 
     <li>Instagram<a href="#">
-    <img src="img/instagram.png" alt="" width="80" height="80"></a></li>
+    <img src="instagram.png" alt="" width="80" height="80"></a></li>
     <br>
 
     <li>LinkedIn<a href="#">
-    <img src="img/linkedin.png" alt="" width="150" height="150"></a></li>
+    <img src="linkedin.png" alt="" width="150" height="150"></a></li>
     <br>
   </ol>
 
 </body>
 </html>
+
