Revise index.html with new content and links
Updated personal information and social media links.

--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
   <h2>HAKKIMDA</h2>
 
   <p>
-    okan.
-  </p>
+    Rümeysa Suden Şentürk.Bilişim sektörüne büyük ilgi duyan, öğrenmeye ve öğretmeye açık, motive ve hevesli bir bireyim. İstanbul Topkapı Üniversitesi, iktisadi,idari ve sosyal bilimler fakültesi, 
+    yönetim bilişim sistemleri alanında, lisans eğitimimin 3. yılındayım. Şu ana kadar 3 farklı ülkeyi ziyaret etme fırsatında bulundum. Bu seyahatler bana çeşitli kültürleri tanıma ve farklı bakış açılarını geliştirme fırsatı sundu.
+    Farklı iş deneyimlerim sayesinde çok çeşit insanla etkili bir şekilde iletişim kurabilirim.   </p>
   <br>
 
 
   <ol>
     <li>Github<a href="#">
-    <img src="github.png" alt="" width="150" height="80"></a></li>
+    <img src="github.png" alt="https://github.com/rmysuden/" width="150" height="80"></a></li>
     <br>
 
     <li>Instagram<a href="#">
-    <img src="instagram.png" alt="" width="80" height="80"></a></li>
+    <img src="instagram.png" alt="https://instagram.com/rmysuden/" width="80" height="80"></a></li>
     <br>
 
     <li>LinkedIn<a href="#">
-    <img src="linkedin.png" alt="" width="150" height="150"></a></li>
+    <img src="linkedin.png" alt="https://www.linkedin.com/in/rmysuden/" width="150" height="150"></a></li>
     <br>
   </ol>
 
 </body>
 </html>
+
 
